@@ -6,7 +6,14 @@
 
 ADDED:
 
+* Added a script for generating NGINX configuration to let NGINX serve static
+  files directly
+
+* Added a way to change the NPROC rlimit in csq_sandbox_options
+
 CHANGED:
+
+* Stopped officially supporting Python 3.8, 3.9, and 3.10.
 
 DEPRECATED:
 
